[package]
name = "morph-fw-rs"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
resolver = "2"
build = "build.rs"
readme = "README.md"
publish = false
license = "MIT"
categories = ["embedded", "firmware", "ble"]
keywords = ["embedded", "firmware", "bluetooth", "ble", "earbuds"]
repository = "https://github.com/morph-audio/morph-fw-rs.git"
description = "Rust-based firmware replacement for the Morph InfiniConnect Earbuds charging case"
homepage = "https://github.com/morph-audio/morph-fw-rs"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.31.5", features = ["binstart"] }
esp32-hal = "0.5.0"
defmt = "0.3.1"
defmt-rtt = "0.3.2"

[build-dependencies]
embuild = "0.30.2"
anyhow = "1.0.57"

[profile.release]
opt-level = "s"
codegen-units = 1
debug = 2
debug-assertions = false

[profile.dev]
opt-level = 3
codegen-units = 1
debug = 2
debug-assertions = true
