[package]
name = "morph-fw-rs-esp32"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["pio"]
pio = ["esp-idf-sys/pio"]

[dependencies]
esp-idf-sys = { version = "*", features = ["binstart"] }
esp-idf-hal = "*"

[build-dependencies]
embuild = "*"
anyhow = "1"
