[package]
name = "morph-v1-esp32-fw-rs"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["esp-idf-sys/pio"]
wifi = []
gui = []

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
anyhow = "1"

[build-dependencies]
embuild = "0.31.1"
anyhow = "1"
